<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/titlePosistion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtTitlePosition" >
    </TextView>

    <TextView
        android:id="@+id/curPosLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/txtCurPosLat" >

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/curPosLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/txtCurPosLon" >

        <requestFocus />
    </TextView>

</LinearLayout>